--- a/News/News/Classes/News/View/News.storyboard
+++ b/News/News/Classes/News/View/News.storyboard
@@ -520,10 +520,10 @@
             </objects>
             <point key="canvasLocation" x="455.5" y="-666.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Reply View Controller-->
         <scene sceneID="4xh-Oy-Ke7">
             <objects>
-                <viewController id="4aM-sd-RR8" sceneMemberID="viewController">
+                <viewController id="4aM-sd-RR8" customClass="HXReplyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Kia-me-6dD"/>
                         <viewControllerLayoutGuide type="bottom" id="qb5-cQ-2So"/>
@@ -533,10 +533,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="81" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JET-lp-Ykj">
-                                <rect key="frame" x="0.0" y="55" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="55" width="375" height="612"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="replyCell" rowHeight="81" id="QRI-aF-A7F" customClass="SXReplyCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="replyCell" rowHeight="81" id="QRI-aF-A7F" customClass="HXReplyCell">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QRI-aF-A7F" id="5cf-dD-usv">
@@ -613,7 +613,7 @@
                                         <connections>
                                             <outlet property="addressLabel" destination="pTU-2k-bcp" id="ulx-8w-Ff0"/>
                                             <outlet property="nameLabel" destination="qrV-TW-FD8" id="SzJ-H3-odI"/>
-                                            <outlet property="sayLabel" destination="Zlk-ej-YfS" id="gMS-cG-IAh"/>
+                                            <outlet property="sayLabel" destination="Zlk-ej-YfS" id="V89-AD-brv"/>
                                             <outlet property="supposeLabel" destination="3ts-XC-j2l" id="ubu-N2-wSs"/>
                                         </connections>
                                     </tableViewCell>
@@ -635,6 +635,9 @@
                                         <state key="normal" backgroundImage="night_icon_back">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="back:" destination="4aM-sd-RR8" eventType="touchUpInside" id="u0q-3P-brE"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -644,6 +647,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="Q5r-UE-idy"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="JET-lp-Ykj" id="ze6-Gx-nHf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ve4-lh-bDu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
