--- a/News/News/Base.lproj/LaunchScreen.xib
+++ b/News/News/Base.lproj/LaunchScreen.xib
@@ -10,7 +10,7 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="背景图2" translatesAutoresizingMaskIntoConstraints="NO" id="H8R-RB-3gE">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="背景图" translatesAutoresizingMaskIntoConstraints="NO" id="H8R-RB-3gE">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                 </imageView>
             </subviews>
@@ -27,6 +27,6 @@
         </view>
     </objects>
     <resources>
-        <image name="背景图2" width="3200" height="4800"/>
+        <image name="背景图" width="2912" height="4368"/>
     </resources>
 </document>
