--- a/News/News/Classes/News/View/News.storyboard
+++ b/News/News/Classes/News/View/News.storyboard
@@ -534,7 +534,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="81" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JET-lp-Ykj">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RP3-4b-CdQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
+                                <subviews>
+                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-vo-0jJ">
+                                        <rect key="frame" x="0.0" y="54" width="375" height="1"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoP-Lj-L1d">
+                                        <rect key="frame" x="0.0" y="12" width="42" height="35"/>
+                                        <state key="normal" backgroundImage="night_icon_back">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="back:" destination="4aM-sd-RR8" eventType="touchUpInside" id="u0q-3P-brE"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="ynu-eO-XFA"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="81" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JET-lp-Ykj">
                                 <rect key="frame" x="0.0" y="55" width="375" height="612"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -557,22 +579,16 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="不化妆也蛮漂亮的" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Zlk-ej-YfS">
-                                                    <rect key="frame" x="58" y="46" width="136" height="21"/>
+                                                    <rect key="frame" x="58" y="46" width="307" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="36" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ts-XC-j2l">
-                                                    <rect key="frame" x="331" y="12" width="16" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MOd-AW-rsy">
-                                                    <rect key="frame" x="350" y="8" width="17" height="22"/>
+                                                    <rect key="frame" x="342" y="8" width="17" height="22"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="22" id="2e2-7h-d6E"/>
-                                                        <constraint firstAttribute="width" constant="17" id="5UO-qL-0fm"/>
+                                                        <constraint firstAttribute="height" constant="22" id="ZbQ-V6-hVy"/>
+                                                        <constraint firstAttribute="width" constant="17" id="wkU-aF-Slf"/>
                                                     </constraints>
                                                     <state key="normal" image="night_contentview_pkbutton">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -592,22 +608,33 @@
                                                         <constraint firstAttribute="height" constant="1" id="U7j-fJ-Xep"/>
                                                     </constraints>
                                                 </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="36" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ts-XC-j2l">
+                                                    <rect key="frame" x="311" y="13" width="28" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="28" id="F5V-nL-UcK"/>
+                                                        <constraint firstAttribute="height" constant="17" id="J39-NK-t7l"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="trailing" secondItem="5cf-dD-usv" secondAttribute="trailingMargin" id="16H-Tp-9wk"/>
                                                 <constraint firstItem="SyQ-Py-M7I" firstAttribute="top" secondItem="5cf-dD-usv" secondAttribute="top" constant="8" id="3CX-gF-aLE"/>
+                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="trailing" secondItem="5cf-dD-usv" secondAttribute="trailingMargin" constant="-8" id="7NY-gI-736"/>
                                                 <constraint firstAttribute="bottom" secondItem="1cY-uD-wuQ" secondAttribute="bottom" constant="1" id="95t-f1-Gz1"/>
+                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="top" secondItem="3ts-XC-j2l" secondAttribute="top" constant="-5" id="BfV-cn-5rY"/>
+                                                <constraint firstAttribute="trailing" secondItem="Zlk-ej-YfS" secondAttribute="trailing" constant="10" id="GoU-Vg-STu"/>
                                                 <constraint firstItem="qrV-TW-FD8" firstAttribute="leading" secondItem="SyQ-Py-M7I" secondAttribute="trailing" constant="15" id="He3-23-IiS"/>
-                                                <constraint firstItem="3ts-XC-j2l" firstAttribute="top" secondItem="5cf-dD-usv" secondAttribute="top" constant="12" id="IBi-QR-lCk"/>
                                                 <constraint firstItem="pTU-2k-bcp" firstAttribute="top" secondItem="5cf-dD-usv" secondAttribute="top" constant="26" id="LPO-TN-GrL"/>
-                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="top" secondItem="5cf-dD-usv" secondAttribute="topMargin" id="Lee-6r-RK6"/>
                                                 <constraint firstItem="SyQ-Py-M7I" firstAttribute="leading" secondItem="5cf-dD-usv" secondAttribute="leading" constant="8" id="O85-l9-9yW"/>
                                                 <constraint firstItem="pTU-2k-bcp" firstAttribute="leading" secondItem="SyQ-Py-M7I" secondAttribute="trailing" constant="15" id="Ocr-De-qic"/>
                                                 <constraint firstItem="Zlk-ej-YfS" firstAttribute="leading" secondItem="5cf-dD-usv" secondAttribute="leading" constant="58" id="OyS-h6-ES9"/>
                                                 <constraint firstItem="qrV-TW-FD8" firstAttribute="top" secondItem="5cf-dD-usv" secondAttribute="topMargin" id="QzQ-Az-vpJ"/>
+                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="top" secondItem="qrV-TW-FD8" secondAttribute="top" id="TgX-nA-R5E"/>
                                                 <constraint firstItem="1cY-uD-wuQ" firstAttribute="leading" secondItem="5cf-dD-usv" secondAttribute="leading" id="XSb-8k-8L6"/>
                                                 <constraint firstItem="Zlk-ej-YfS" firstAttribute="top" secondItem="pTU-2k-bcp" secondAttribute="bottom" constant="5" id="kcg-HR-H1s"/>
-                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="leading" secondItem="3ts-XC-j2l" secondAttribute="trailing" constant="3" id="owA-hJ-gzN"/>
+                                                <constraint firstItem="MOd-AW-rsy" firstAttribute="leading" secondItem="3ts-XC-j2l" secondAttribute="trailing" constant="3" id="qwn-nn-eAH"/>
                                                 <constraint firstAttribute="trailing" secondItem="1cY-uD-wuQ" secondAttribute="trailing" id="trt-SG-MT4"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -625,27 +652,17 @@
                                     <outlet property="delegate" destination="4aM-sd-RR8" id="iwe-Tc-5QS"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RP3-4b-CdQ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
-                                <subviews>
-                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-vo-0jJ">
-                                        <rect key="frame" x="0.0" y="54" width="375" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoP-Lj-L1d">
-                                        <rect key="frame" x="0.0" y="12" width="42" height="35"/>
-                                        <state key="normal" backgroundImage="night_icon_back">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="back:" destination="4aM-sd-RR8" eventType="touchUpInside" id="u0q-3P-brE"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RP3-4b-CdQ" firstAttribute="top" secondItem="TdT-SM-vWf" secondAttribute="top" id="2yS-vj-4Tc"/>
+                            <constraint firstAttribute="trailing" secondItem="JET-lp-Ykj" secondAttribute="trailing" id="GMD-E2-7OP"/>
+                            <constraint firstItem="JET-lp-Ykj" firstAttribute="top" secondItem="RP3-4b-CdQ" secondAttribute="bottom" id="GSO-7E-DGC"/>
+                            <constraint firstItem="JET-lp-Ykj" firstAttribute="leading" secondItem="TdT-SM-vWf" secondAttribute="leading" id="MU4-38-48I"/>
+                            <constraint firstItem="qb5-cQ-2So" firstAttribute="top" secondItem="JET-lp-Ykj" secondAttribute="bottom" id="ZCA-KK-twE"/>
+                            <constraint firstAttribute="trailing" secondItem="RP3-4b-CdQ" secondAttribute="trailing" id="aVA-ux-wyu"/>
+                            <constraint firstItem="RP3-4b-CdQ" firstAttribute="leading" secondItem="TdT-SM-vWf" secondAttribute="leading" id="sqA-g1-1lv"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Q5r-UE-idy"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
